# ossummit22

./: snippet.yaml  update.sh  update_fleet.sh
ble/: Cargo.toml
ble/app/: Cargo.toml
ble/app/src/: main.rs
ble/bootloader/: Cargo.toml
ble/bootloader/src/: main.rs
firmware/: Cargo.toml  flashit.sh  rust-toolchain.toml
firmware/application/: Cargo.toml
firmware/application/src/: main.rs
firmware/bootloader/: Cargo.toml  build.rs
gateway/: Cargo.toml  run.sh  runpublish.sh
gateway/src/: board.rs  main.rs
simulated/: rust-toolchain.toml
