[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "microbit-application"
version = "0.1.0"
description = "Microbit Bootloader + DFU over BLE"
keywords = ["nrf52833", "nrf", "nrf52", "microbit", "dfu", "bootloader", "ble"]
resolver = "2"

[dependencies]
defmt = { version = "0.3" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
panic-reset = { version = "0.1.1", optional = true }

drogue-device = { version = "0.1.0", default-features = false, features = ["time", "dfu", "bsp+microbit", "ble+nrf52833"] }

embassy-boot-nrf = { version = "0.1.0", default-features = false, features = ["softdevice"] }
embassy = { version = "0.1.0", default-features = false, features = [] }
embassy-nrf = { version = "0.1.0", default-features = false, features = ["nrf52833", "gpiote", "time-driver-rtc1"]}

cortex-m    = { version = "0.7.2" }
cortex-m-rt = "0.7"
heapless = "0.7"
futures     = { version = "0.3.17", default-features = false, features = ["async-await"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server", "s113", "nrf52833", "critical-section-impl"] }
nrf-softdevice-s113 = { version = "0.1.0" }
nrf-softdevice-defmt-rtt = { version = "0.1.0", optional = true }

[features]
default = [
    "panic-reset"
]
debug = [
    "panic-probe",
    "drogue-device/defmt",
    "nrf-softdevice/defmt",
    "embassy/defmt",
    "embassy-nrf/defmt",
    "embassy-boot-nrf/defmt",
    "nrf-softdevice-defmt-rtt",
]
